# palantir

./: .antigravity  .bashrc  .claude.json  .gitconfig  .gitignore  .mcp.json  .tmux.conf  CLAUDE.md  CLEANUP_REPORT.md  Dockerfile  GEMINI.md  GEMINI.md.bak_pre_visibility  LAYER0_SYSTEM_PROMPT.xml  Makefile  ODA_LLM_AGNOSTIC_GOVERNANCE.md  ODA_MANIFEST.md  ODA_V3_TECHNICAL_REFERENCE.md  PHASE_6_PLAN.md  README.md  WARP.md  bad_plan.json  deep-research-math-image-parsing-prompt.md  docker-compose.sandbox.yml  e2e_plan.json  final_test_result.txt  package-lock.json  package.json  pyproject.toml  relay.db  test_output_full.txt  test_plan.json  uclp_phase2_plan.json  uclp_phase3_plan.json  uclp_refactor_plan.json
coding/: .coverage  AUDIT_FINAL_REPORT.md  AUDIT_MASTER_PLAN.md  AUDIT_PHASE_1_DISCOVERY.md  AUDIT_PHASE_2_DEEP_DIVE.md  CONTEXT_LOADER.md  DEEP_RESEARCH_PROMPT.md  E2E_TEST_PLAN.md  E2E_TEST_REPORT.md  HANDOFF_FULL_CONTEXT.md  Improvement_Plan.md  LEARNING_INDEX.md  LLM_CONTRACT.md  PROJECT_REQUIREMENTS_ANALYSIS.md  README.md  SYSTEM_DIRECTIVE.md  package-lock.json  package.json  pyproject.toml  pytest.ini  requirements.txt  test_invalid_protocol.json  uclp-languages.json  uclp-reference.json  validate.js
coding/.github/: dependabot.yml
coding/.github/workflows/: ci.yml  validate-schema.yml
coding/axios-token-refresh/: .env.example  IMPLEMENTATION_GUIDE.md  QUICK_START.md  README.md  jest.config.js  package-lock.json  package.json  tsconfig.json
coding/axios-token-refresh/src/: axiosInterceptor.ts  index.ts  tokenRefresh.test.ts  tokenRefreshServer.ts  usageExample.ts
coding/examples/: basic_profile.py  bkt_mastery.py  zpd_recommendations.py
coding/hwp_automation/: 20251228.hwpx  ActionTable.txt  EventHandler.txt  HwpAutomation.txt  ParameterSetTable.txt  action_request.json  advanced_action_request.json  analyze_pdf.py  convert_pipeline.py  core_bridge.py  dia_report_v1.json  executor_win.py  get_text.py  inspect_hwpx.py  math_reconstruct_payload.json  nlp_action_request.json  pipeline_payload.json  probe_pdf_layout.py  reconstruct_enhanced.py  reconstruct_payload.json  reconstruct_sample_math.py  research_nlp_design.md  sample_reconstructed_verified.hwpx  source_text.txt  test_actions.py  test_advanced_layout.py  test_nlp.py  verify_reconstruction.py
coding/hwp_automation/archive/: hwp_automation_template.ps1  insert_table.ps1  legacy_math.ps1
coding/hwp_automation/lib/: compiler.py  ingest_hwpx.py  ingest_pdf.py  ir.py  models.py
coding/hwp_automation/nlp/: intents.py  processor.py
coding/hwp_automation/output/: mathpix_cache.json  mathpix_generated.ps1  structure_generated.ps1
coding/hwp_automation/scripts/: pipeline_actions.py
coding/hwp_automation/setup/: deploy_dll.py  hwp_registry_fix.py
coding/hwp_automation/tests/: test_hwp_pipeline.py
coding/knowledge_bases/: 00_palantir_core_architecture.md  00a_programming_fundamentals.md  00b_functions_and_scope.md  00c_data_structures_intro.md  00d_async_basics.md  00e_typescript_intro.md  01_language_foundation.md  04_data_layer.md  07_version_control.md  08_advanced_capabilities.md  09_orion_system_architecture.md  10_visual_glossary.md  10a_sql_fundamentals.md  11a_spark_basics.md  13_pipeline_builder.md  15_slate_dashboards.md  16_quiver_analytics.md  17_contour_visualization.md  18_vertex_ai_models.md  19_deployment_and_ci_cd.md  20_go_services_and_concurrency.md  21_python_backend_async.md  22_java_kotlin_backend_foundations.md  F03_constant_semantics.md  F04_declaration_vs_definition.md  F10_lexical_scope.md  F11_closure_capture.md  F12_block_vs_function_scope.md  F13_hoisting.md  F14_lifetime_ownership.md  F20_static_vs_dynamic_typing.md  F21_type_inference.md  F22_type_coercion_casting.md  F23_structural_vs_nominal_typing.md  F24_generics_polymorphism.md  F30_conditionals.md  F31_loops_iteration.md  F32_exception_handling.md  F33_pattern_matching.md  F34_control_flow_expressions.md  (+10 more)
coding/legacy/: citation_system_design.json  test_validation.js  universal_code_learning_protocol_schema.json  universal_code_learning_protocol_v2.json  validate_protocol.js
coding/palantir-fde/: palantir-fde-context.md
coding/palantir-fde-learning/: README.md  SYSTEM_DIRECTIVE.md  learner_state.db
coding/palantir-fde-learning/knowledge_bases/: 00_palantir_core_architecture.md  01_language_foundation.md  02_react_ecosystem.md  03_styling_systems.md  04_data_layer.md  05_testing_pyramid.md  06_build_tooling.md  07_version_control.md  08_advanced_capabilities.md  09_orion_system_architecture.md  11_osdk_typescript.md  12_workshop_development.md  14_actions_functions.md  implementation_plan_chapter2.md
coding/palantir-fde-prep/: Prompt1.md
coding/palantir_fde_learning/: __init__.py
coding/palantir_fde_learning.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
coding/palantir_fde_learning/adapters/: __init__.py  kb_reader.py
coding/palantir_fde_learning/application/: __init__.py  scoping.py
coding/palantir_fde_learning/cli/: __init__.py  main.py
coding/palantir_fde_learning/domain/: __init__.py  bkt.py  types.py
coding/references/: comparison_framework.json
coding/tests/: __init__.py  conftest.py
coding/tests/e2e/: verify_flow.py
coding/tests/unit/: test_bkt.py  test_kb_reader.py  test_repository.py  test_scoping.py  test_types.py
cow/cow-cli/: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
cow/cow-cli/cow_cli/: __init__.py  __main__.py  cache.py  cli.py  config.py  logging.py  main.py
cow/cow-cli/monitoring/: alert_rules.yml  prometheus.yml
cow/cow-cli/tests/: __init__.py  test_cache.py  test_export.py  test_export_cli.py  test_hooks.py  test_mathpix.py  test_mcp_servers.py  test_orchestrator.py  test_pipeline.py  test_preprocessing.py  test_priority_scorer.py  test_process_cli.py  test_review_cli.py  test_review_database.py  test_review_interactive.py  test_review_router.py  test_semantic.py  test_separator.py  (+1 more)
cow/cow-mcp/: pyproject.toml
math/backend/: Dockerfile  main.py  mypy.ini  pyproject.toml
(+6335 files in other folders)
