[project]
name = "cow-cli"
version = "0.1.0"
description = "COW Pipeline CLI - Layout/Content Separation with Claude Agent SDK"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "palantir", email = "palantir@example.com"}
]
dependencies = [
    "typer>=0.21.0",
    "rich>=14.0.0",
    "pydantic>=2.0.0",
    "httpx>=0.28.0",
    "keyring>=25.0.0",
    "sqlalchemy>=2.0.0",
    "aiosqlite>=0.22.0",
    "python-docx>=1.2.0",
    "pylatex>=1.4.0",
    "Pillow>=12.0.0",
    "imagehash>=4.3.0",
    "diskcache>=5.6.0",
    "pyyaml>=6.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.0",
    "pytest-asyncio>=1.0.0",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.0",
    "respx>=0.22.0",
]

[project.scripts]
cow = "cow_cli.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --cov=cow_cli --cov-report=term-missing"

[tool.coverage.run]
source = ["cow_cli"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]
