[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ontology-definition"
version = "1.0.0"
description = "Palantir Foundry-aligned Ontology Definition package for ODA system"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "ODA Team", email = "oda@palantir.local" }
]
keywords = [
    "ontology",
    "palantir",
    "foundry",
    "schema",
    "object-type",
    "link-type",
    "action-type",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Typing :: Typed",
]
dependencies = [
    "pydantic>=2.0,<3.0",
    "jsonschema>=4.20.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
]

[project.urls]
Documentation = "https://github.com/palantir/ontology-definition#readme"
Source = "https://github.com/palantir/ontology-definition"

[tool.hatch.build.targets.wheel]
packages = ["ontology_definition"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_ignores = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
